# lesson_open_ai_api

./: .gitignore  README.md  pyproject.toml
code/: check.py  question.py  run_git_log.py
config/: config.py  enviroment.py  logger.py
core/: run_open_ai.py
documents/ruff/: ruff_help.txt
documents/uv/: uv_python_help.txt
source/: default_question.json
src/cli/: cli.py
tests/: test_dirmanage.py
utils/: dirmanage.py  get_root.py
